Backend/api-backend/overlays/production/tolerations.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: #project_name#
spec:
  template:
    spec:
      tolerations:
        - key: "dedicated"
          operator: "Equal"
          value: "prod"
          effect: "NoSchedule"
